bee-common/bee-common-derive/tests/packable/fail/invalid_ty_enum.stderr
error: Tags for enums can only be sized integers.
  --> $DIR/invalid_ty_enum.rs:12:21
   |
12 | #[packable(tag_ty = [u8; 32])]
   |                     ^^^^^^^^
